--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:serve": "vitepress serve docs",
-        "docs:deploy": "bash deploy.sh"
+        "deploy": "bash deploy.sh"
     }
 }
