--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
-        "docs:serve": "vitepress serve docs",
-        "deploy": "bash deploy.sh"
+        "docs:serve": "vitepress serve docs"
+
     }
 }
